test/asm/invalid-jr.err
error: `JR` target must be between -128 and 127 bytes away, not -258; use `JP` instead
    at invalid-jr.asm(3)
Assembly aborted with 1 error!
